tests/NormalTests/paczka1/fuzzy1/21665376.err
Error in line 20: Xzp A1 66,7
Error in line 22: Xzp S56 15,5
Error in line 29: JmAE46 S353 163,4
Error in line 35: JmAE46 S56 50,3
